# mcp-greenhouse

./: .env.example  .mcpbignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  manifest.json  mpak.json  pyproject.toml  server.json
.github/workflows/: scan.yml
src/mcp_greenhouse/: SKILL.md  __init__.py  api_client.py  api_models.py  server.py
tests/: __init__.py  conftest.py  test_api_client.py  test_api_models.py  test_server.py
tests-integration/: conftest.py  test_core_tools.py  test_skill_llm.py
